--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -8,6 +8,10 @@
     <h1>i will do it </h1>
     <h2>what should i do</h2>
     <h3>i think i have a headache</h3>
+    <p>test</p>
+    <p>test2</p>
+    <p>test3</p>
+    <p>test4</p>
     <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png">alt="description"</a>
  </body>  
 </html>
