--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -13,5 +13,7 @@
     <p>test3</p>
     <p>test4</p>
     <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png">alt="description"</a>
+    <a herf="tweets.html">alt=tweets.html</a>
+
  </body>  
 </html>
