--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -13,7 +13,7 @@
     <p>test3</p>
     <p>test4</p>
     <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png">alt="description"</a>
-    <a href="https://x.com/kareemhossam59/status/1850799487754674370?ref_src=twsrc%5Etfw%7Ctwcamp%5Etweetembed%7Ctwterm%5E1850799487754674370%7Ctwgr%5Ee035b63e7cc0d64b2ffa09945f3a229c2e54d60a%7Ctwcon%5Es1_c10&ref_url=https%3A%2F%2Fpublish.twitter.com%2F%3Furl%3Dhttps%3A%2F%2Ftwitter.com%2Fkareemhossam59%2Fstatus%2F1850799487754674370">alt="x"</a>
+    <a href="https://x.com/kareemhossam59/status/1850799487754674370?ref_src=twsrc%5Etfw%7Ctwcamp%5Etweetembed%7Ctwterm%5E1850799487754674370%7Ctwgr%5Ee035b63e7cc0d64b2ffa09945f3a229c2e54d60a%7Ctwcon%5Es1_c10&ref_url=https%3A%2F%2Fpublish.twitter.com%2F%3Furl%3Dhttps%3A%2F%2Ftwitter.com%2Fkareemhossam59%2Fstatus%2F1850799487754674370"></a>
     <a herf="index.html">alt=index.html</a>
  </body>  
 </html>
