--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -13,21 +13,25 @@
             </li>
         </ul>
     </header>
-    <main>
-        <h1>i will do it </h1>
-        <h2>what should i do</h2>
-        <h3>i think i have a headache</h3>
-        <p>test</p>
-        <p>test2</p>
-        <p>test3</p>
-        <p>test4</p>
-        <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png">alt="description"</a>
-        <a href="<blockquote class="twitter-tweet"><p lang="zxx" dir="ltr"><a href="https://t.co/XgGmjnrjhG">pic.twitter.com/XgGmjnrjhG</a></p>&mdash; Kareem hossam (@kareemhossam59) <a href="https://twitter.com/kareemhossam59/status/1850799487754674370?ref_src=twsrc%5Etfw">October 28, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>"></a>
 
+    <main>
+        <article>
+            <h1>i will do it </h1>
+            <h2>what should i do</h2>
+            <h3>i think i have a headache</h3>
+            <p>test</p>
+            <p>test2</p>
+            <p>test3</p>
+            <p>test4</p>
+            <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png">alt="description"</a>
+            <a href="<blockquote class="twitter-tweet"><p lang="zxx" dir="ltr"><a href="https://t.co/XgGmjnrjhG">pic.twitter.com/XgGmjnrjhG</a></p>&mdash; Kareem hossam (@kareemhossam59) <a href="https://twitter.com/kareemhossam59/status/1850799487754674370?ref_src=twsrc%5Etfw">October 28, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>">
+        </article>
+        
+        <aside>
+            <p> later </p>
+        </aside>
     </main>
-    <aside>
-        <p> later </p>
-    </aside>
+    
     <footer>
        <a Made by kareem hossam - <a href="https://www.youtube.com/watch?v=Y2NGb5AAy1c" target="_blank">here</a>.
     </footer>
