--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -13,6 +13,7 @@
             </li>
         </ul>
     </header>
+
     <main>
         <article>
             <h1>i will do it </h1>
@@ -23,7 +24,8 @@
             <p>test3</p>
             <p>test4</p>
             <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png">alt="description"</a>
-            <a href="<blockquote class="twitter-tweet"><p lang="zxx" dir="ltr"><a href="https://t.co/XgGmjnrjhG">pic.twitter.com/XgGmjnrjhG</a></p>&mdash; Kareem hossam (@kareemhossam59) <a href="https://twitter.com/kareemhossam59/status/1850799487754674370?ref_src=twsrc%5Etfw">October 28, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>"></a>
+            <a href="blockquote class="twitter-tweet"><p lang="zxx" dir="ltr">
+                <a href="https://t.co/XgGmjnrjhG">pic.twitter.com/XgGmjnrjhG</a></p>&mdash; Kareem hossam (@kareemhossam59) <a href="https://twitter.com/kareemhossam59/status/1850799487754674370?ref_src=twsrc%5Etfw">October 28, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>"></a>
         </article>
         
         <aside>
