--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -5,11 +5,14 @@
     <title>  html begginer developer</title>
  </head> 
  <body>
+
     <header>
+
         <ul>
+
             <li>
-                <a herf="index.html">alt=index.html</a>
-                <a herf="tweets.html">alt=tweets.html</a>
+                <p> <a herf="index.html">alt=index.html</a></p>
+                 <p> <a herf="tweets.html">alt=tweets.html</a></p>
             </li>
         </ul>
     </header>
