--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -33,6 +33,63 @@
                 <a href="https://twitter.com/kareemhossam59/status/1850799487754674370?ref_src=twsrc%5Etfw">October 28, 2024</a>
               </blockquote> 
               <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+              <table>
+                <tr>
+                    <thead>
+                     NAME
+                    </thead>
+                    <thead>
+                     AGE
+                    </thead>
+                    <thead>
+                    COUNTRY
+                    </thead>
+                </tr>
+                <tr>
+                    <tbody>
+                        John
+                    </tbody>
+                    <tbody>
+                        25
+                    </tbody>
+                    <tbody>
+                        USA
+                    </tbody>
+                </tr>
+                <tr>
+                    <tbody>
+                        Emily
+                    </tbody>
+                    <tbody>
+                        28
+                    </tbody>
+                    <tbody>
+                        CANADA
+                    </tbody>
+                </tr><tr>
+                    <tbody>
+                        Michael
+                    </tbody>
+                    <tbody>
+                        32
+                    </tbody>
+                    <tbody>
+                        Australia
+                    </tbody>
+                </tr>
+                <tr>
+                    <tbody>
+                        Sophia
+                    </tbody>
+                    <tbody>
+                        21
+                    </tbody>
+                    <tbody>
+                        UK
+                    </tbody>
+                </tr>
+              </table>
                       </article>
         
                       <aside>
