--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -5,17 +5,40 @@
     <title> KAREEM HOSSAM - Personal Portfolio</title>
  </head> 
  <body>
-
     <header>
-
+        <h1>kareem hossam</h1>
+        <p> welvome in my portofolio</p>
+        
+    </header>
+    <nav>
         <ul>
-
             <li>
-                <p> <a href="index.html">index.html</a></p>
-                 <p> <a href="tweets.html">atweets.html</a></p>
+                 <a href="about me">about me</a>
+                 <a href="projectsl">projects</a>
+                 <a href="conayct me">conayct me</a>
             </li>
         </ul>
-    </header>
+    </nav>
+    <section id="introduction">
+        <h2> introduction</h2>
+        <p> it is small intro about me</p>
+    </section>
+    <section id="projects">
+        <h2>title of  introduction</h2>
+        <article>
+          <h3>my first one</h3>
+            <p> it is my first project</p>
+            <a href="" target="_blank">pro 1</a>
+        </article>
+    </section>
+    <section id="about">
+        <h2> about me</h2>
+        <p> it is small intro about me</p>
+    </section>
+    <section id="contact">
+        <h2> contact</h2>
+        <a href="mailto:your.email@example.com">email</a>
+    </section>
     <main>
         <article>
             <h1>i will do it </h1>
