--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -8,6 +8,8 @@
     <header>
         <h1>kareem hossam</h1>
         <p> welvome in my portofolio</p>
+        <meta charset="UTF-8">
+    <title> KAREEM HOSSAM - Personal Portfolio</title>
         
     </header>
     <nav>
