--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -124,7 +124,7 @@
     </main>
     
     <footer>
-       <p> Made by kareem hossam - <a href="https://www.youtube.com/watch?v=Y2NGb5AAy1c" target="_blank">here</a>.</p>
+       <p> &copy; 2024  Made by kareem hossam - <a href="https://www.youtube.com/watch?v=Y2NGb5AAy1c" target="_blank">here</a>.</p>
     </footer>
  </body>  
 </html>
