--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -3,44 +3,21 @@
  <head>
     <meta charset="UTF-8">
     <title> KAREEM HOSSAM - Personal Portfolio</title>
+    <link href="base.css" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
  </head> 
  <body>
+
     <header>
-        <h1>kareem hossam</h1>
-        <p> welvome in my portofolio</p>
-        <meta charset="utf-8">
-    <title> KAREEM HOSSAM - Personal Portfolio</title>
-        
-    </header>
-    <nav>
+
         <ul>
+
             <li>
-                 <a href="about me">about me</a>
-                 <a href="projectsl">projects</a>
-                 <a href="conayct me">conayct me</a>
+                <p> <a href="index.html">index.html</a></p>
+                 <p> <a href="tweets.html">atweets.html</a></p>
             </li>
         </ul>
-    </nav>
-    <section id="introduction">
-        <h2> introduction</h2>
-        <p> it is small intro about me</p>
-    </section>
-    <section id="projects">
-        <h2>title of  introduction</h2>
-        <article>
-          <h3>my first one</h3>
-            <p> it is my first project</p>
-            <a href="" target="_blank">pro 1</a>
-        </article>
-    </section>
-    <section id="about">
-        <h2> about me</h2>
-        <p> it is small intro about me</p>
-    </section>
-    <section id="contact">
-        <h2> contact</h2>
-        <a href="mailto:your.email@example.com">email</a>
-    </section>
+    </header>
     <main>
         <article>
             <h1>i will do it </h1>
@@ -124,7 +101,7 @@
     </main>
     
     <footer>
-       <p> &copy; 2024  Made by kareem hossam - <a href="https://www.youtube.com/watch?v=Y2NGb5AAy1c" target="_blank">here</a>.</p>
+       <p> Made by kareem hossam - <a href="https://www.youtube.com/watch?v=Y2NGb5AAy1c" target="_blank">here</a>.</p>
     </footer>
  </body>  
 </html>
